examples/test/testpolicy6306.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6306
  namespace: namespace229
spec:
  podSelector:
    matchLabels:
      key11: value37
      key46: value6
      key21: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key19: value13
          key32: value10
      podSelector:
        matchLabels:
          key47: value26
